--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -633,7 +633,7 @@ Sticky Menu
 }
 
 .eight-banner-section .eight-banner-content .banner-content-box .ei-banner-btn {
-  padding: 45px 0px 25px 0px;
+  padding: 15px 0px 25px 0px;
 }
 
 .eight-banner-section .eight-banner-content .banner-content-box .ei-banner-btn a {
@@ -656,6 +656,18 @@ Sticky Menu
   background-color: #ff00d6;
   padding: 5px;
 }
+.eight-banner-section .eight-banner-content .banner-content-box .ei-banner-btn span:nth-child(1) {
+  height: 55px;
+  color: #fff;
+  /* width: 175px; */
+  line-height: 55px;
+  text-align: center;
+  border-radius: 50px;
+  margin-right: 20px;
+  border-top-right-radius: 0;
+  background-color: #ff00d6;
+  padding: 19px;
+}
 
 .eight-banner-section .eight-banner-content .banner-content-box .ei-banner-btn a:nth-child(1) i {
   top: 5px;
@@ -664,8 +676,20 @@ Sticky Menu
   position: relative;
   margin-right: 10px;
 }
+.eight-banner-section .eight-banner-content .banner-content-box .ei-banner-btn span:nth-child(1) i {
+  top: 5px;
+  color: #000;
+  font-size: 25px;
+  position: relative;
+  margin-right: 10px;
+}
 
 .eight-banner-section .eight-banner-content .banner-content-box .ei-banner-btn a:nth-child(1):hover {
+  background-color: #009cff;
+  border-top-right-radius: 50px;
+  border-bottom-left-radius: 0px;
+}
+.eight-banner-section .eight-banner-content .banner-content-box .ei-banner-btn span:nth-child(1):hover {
   background-color: #009cff;
   border-top-right-radius: 50px;
   border-bottom-left-radius: 0px;
