--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,16 @@
 .serviceBoxAlign{
     height: 415px;
 }
+.serviceBoxAlign2{
+    height: 215px;
+}
+#join_the_club .service {
+    padding: 40px 30px;
+    background-color: #fff;
+    border: 1px solid #f0f0f0;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
