--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -28,7 +28,7 @@ ul.logos {
 }
 
 ul.logos li {
-    margin: 0 0 0 0;
+    margin: 0 0 15px 0;
     padding: 0 0 0 0;
     list-style: none;
     display: inline-block;     
